--- a/nx.json
+++ b/nx.json
@@ -41,7 +41,8 @@
         "apps/download-service-e2e/**/*",
         "apps/metadata-service-e2e/**/*",
         "apps/storage-service-e2e/**/*",
-        "apps/get-image-service-e2e/**/*"
+        "apps/get-image-service-e2e/**/*",
+        "apps/diagram-service-e2e/**/*"
       ]
     }
   ]
