--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@scale-hoster/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+     "doc": "jsdoc -c jsdoc.json"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
@@ -41,6 +43,7 @@
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jsdoc": "^4.0.4",
     "nx": "20.4.6",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
